# sci-vis

./: README.md
ex1/: assignment1-2.py  assignment1-3.py  assignment1.tex  feedback.txt
ex10/: DVRcomposition.glsl  assignment_10_bühler_leusmann_ullerich.tex  feedback.txt
ex11/: assignment_11_bühler_leusmann_ullerich.tex  feedback.txt
ex12/: assignment12_1.py  feedback.txt
ex2/: assignment2-3.py  assignment2.tex  feedback.txt
ex3/: assignment3.tex  feedback.txt
ex3/vtkPointSplatter/: CMakeLists.txt  PointSplatter.xml  vtkPointSplatter.cxx  vtkPointSplatter.h
ex4/: assignment_04_bühler_leusmann_ullerich.tex  feedback.txt
ex4/vtkVectorViewer/: CMakeLists.txt  VectorViewer.xml  vtkVectorViewer.cxx  vtkVectorViewer.h
ex5/: assignment_05_bühler_leusmann_ullerich.tex  delaunay.py  feedback.txt
ex6/: assignment_06_bühler_leusmann_ullerich.tex  feedback.txt  lena-output.pgm  ltf.cpp
ex7/: analyticalisolines.py  assignment_07_bühler_leusmann_ullerich.tex  feedback.txt
ex8/: assignment_08_bühler_leusmann_ullerich.tex  colormap2Dglsl.sec  feedback.txt
ex9/: assignment_09_bühler_leusmann_ullerich.tex  feedback.txt
